--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+<title>Kevin's 1st homework</title>
+</head>
 <object
   type="text/html"
   data="/.netlify/functions/server"
