--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<head>
-<title>Kevin's 1st homework</title>
-</head>
+<html lang="en">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Kevin's 1st homework</title>
+      <link rel="stylesheet" href="express/public/css/style.css">
+   </head>
+
 <object
   type="text/html"
   data="/.netlify/functions/server"
   style="width:100%;height:100%;"
 >
+</html>
